--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,10 @@
-
+.rafting {
+  /* The image used */
+  background-image: url("../img/adventure-banner.jpg");
+  height: 300px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 /*--------------------------------------------------------------
 # Testimonials
 --------------------------------------------------------------*/
